[package]
name = "anomalocaris"
version = "0.1.1"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"
repository = "https://github.com/Axect/Anomalocaris"
description = "Rust Armadillo wrapper"
license = "BSD-3-Clause"
categories = ["science"]
readme = "README.md"
keywords = ["Numeric", "Armadillo", "Science", "LinearAlgebra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
